<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appcompat="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search_black"
        appcompat:actionViewClass="android.support.v7.widget.SearchView"
        appcompat:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:id="@+id/menu_about"
        android:title="@string/about"
        appcompat:showAsAction="never"/>

    <item
        android:id="@+id/sync"
        android:title="@string/sync"
        appcompat:showAsAction="never"/>

    <item
        android:id="@+id/getData"
        android:title="@string/getData"
        appcompat:showAsAction="never"/>
</menu>