<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.shaheed.mtesting.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/measure_it"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="italic|bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name_id"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="16dp"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/ph_num_id"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:hint="@string/ph_number"
                android:inputType="number"
                android:padding="16dp"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/shirt_id"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:hint="@string/shrit_height"
                android:inputType="number"
                android:padding="16dp"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/shoulder_id"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:hint="@string/shoulder"
                android:inputType="number"
                android:padding="16dp"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/trouser_id"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:hint="@string/trouser_height"
                android:inputType="number"
                android:padding="16dp"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/hand_id"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:hint="@string/hand_length"
                android:inputType="number"
                android:padding="16dp"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
            <Button
                android:id="@+id/save_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/save"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>